Bug 166612 - To set the listbox Selection property, the ellipsis tool works with inverted Multiselection semantic
Summary: To set the listbox Selection property, the ellipsis tool works with inverted ...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-05-16 23:30 UTC by Alfio Littletree
Modified: 2025-11-25 16:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alfio Littletree 2025-05-16 23:30:18 UTC
Description:
In the Dialog Editor, changing the "Selection" property for a Listbox control, the tool opened by the "..." button have a strange behavior. When the Multiselection property is set to "No", the tool allows to select any number of items. When the Multiselection property is set to "Yes", it allows to select only one item.


Steps to Reproduce:
1. Create a dialog and insert a ListBox control in it (as in https://help.libreoffice.org/latest/en-US/text/sbasic/guide/create_dialog.html )
2. While the new control is active, look at its properties in the General page.
3. In the "List entries" property, click the Multiline Editing button, write at least 3 rows, then click Ok
4. In the "Multiselection" property, select "No"
5. In the "Selected" property, click the "..." button on the right
6. When you see your items, try to select two of them together. You can use Ctrl+Clic or Shift+Arrow. Unexpectedly it works 
7. Click Cancel for the second test
8. In the "Multiselection" property select "Yes"
9. In the "Selected" property, click the "..." button
10. Try to select two items together. Unexpectedly it not works


Actual Results:
When the Multiselection property is Yes, the user can select only one item for the Selection property. When the Multiselection property is No, he can select any number of items for the Selection property.


Expected Results:
When the Multiselection property is Yes, the user can select any number of items for the Selection property. When the Multiselection property is No, he can select only one item for the Selection property.



Reproducible: Always


User Profile Reset: No

Additional Info:
Tryed on Calc and Writer, I suppose happens also on other components.
I cannot test a version older then 7.2, but I reproduced the bug also in recent versions 25.2.3.2 and in this:

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 19f3b72f34c487dc97d582712d21734a7e055fd5
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded
Comment 1 Saburo 2025-05-21 10:15:59 UTC
Thank you for reporting the bug.
Reproduce
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Version: 6.2.0.0.beta1+
Build ID: 196f174b5707760d41d8062aed6410ba08878326

author	Caolán McNamara
commit 196f174b5707760d41d8062aed6410ba08878326

weld ScShareDocumentDlg
Change-Id: I790f957c9ebc6d87a94a355c30215245aaabeb30
Reviewed-on: https://gerrit.libreoffice.org/64421
Comment 2 Caolán McNamara 2025-05-22 12:52:03 UTC
indeed, I think I just simply got them the wrong way around for this case
Comment 3 Commit Notification 2025-05-22 20:44:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6dd8843f7880255a1292e4b3296a1611874e098d

Resolves: tdf#166612 MultiSelection inverted for form list properties

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2025-05-22 20:45:23 UTC
done in trunk, backport to 25.2 in gerrit
Comment 5 Commit Notification 2025-05-22 21:40:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/10b6662eac4a175801a54f824cea33d60c436032

Resolves: tdf#166612 MultiSelection inverted for form list properties

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Alfio Littletree 2025-05-23 16:04:01 UTC
I tested the fix, in version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3158b14e0b26875300a8098bc117a5e69b76f48f
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded

It works fine. Thanks to Caolán McNamara.
Also thanks to Saburo.
Comment 7 jimmy 2025-11-25 07:52:47 UTC Comment hidden (spam)
Comment 8 jimmy 2025-11-25 07:54:11 UTC Comment hidden (spam)