Resolves: tdf#166612 MultiSelection inverted for form list properties

Change-Id: I65bac82ceb1f0ddf4a23837e4c29e40e70eead68
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185664
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>